add tar to staging deploy action

--- a/.github/workflows/develop_staging-neog-admissions.yml
+++ b/.github/workflows/develop_staging-neog-admissions.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - staging-neog-admissions
+name: [Staging] - staging-neog-admissions
 
 on:
   push:
@@ -27,11 +27,14 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: 'Tar files'
+        run: tar -cvf neog_portal.tar .
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: neog_portal.tar
 
   deploy:
     runs-on: ubuntu-latest
