--- a/.github/workflows/develop_staging-neog-admissions.yml
+++ b/.github/workflows/develop_staging-neog-admissions.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: neog_portal.tar
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
