--- a/client/package.json
+++ b/client/package.json
@@ -68,6 +68,6 @@
     "storybook-css-modules-preset": "^1.1.1",
     "ts-jest": "^26.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "4.3.4"
   }
 }
