--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
+    "markdown-to-jsx": "^7.1.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -67,6 +68,6 @@
     "storybook-css-modules-preset": "^1.1.1",
     "ts-jest": "^26.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "4.3.4"
   }
 }
