--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.15",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.25",
     "nodemailer": "^6.6.2",
+    "razorpay": "^2.0.6",
+    "socket.io": "^4.2.0",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
   },
