--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.1.25",
     "nodemailer": "^6.6.2",
+    "nodemon": "^2.0.13",
     "razorpay": "^2.0.6",
     "socket.io": "^4.2.0",
     "winston": "^3.3.3",
@@ -56,7 +57,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "4.3.4"
   },
