--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "canvas-confetti": "^1.4.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
+    "gapi-script": "^1.2.0",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.3",
     "next": "latest",
